--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
         <div class="main">
           <img src="src/Light-No-BG-removebg-preview.png" alt="No-BG" />
           <p>
-            <span>Skripsi+ </span>merupakan sebuah platform bimbingan skripsi
+            <span><strong>Skripsi+ </strong></span>merupakan sebuah platform bimbingan skripsi
             online yang menyediakan instruktur-instruktur terpecaya untuk
             membimbing dan membantu para mahasiswa dalam menyelesaikan skripsi.
           </p>
