--- a/Home.html
+++ b/Home.html
@@ -31,9 +31,10 @@
           <img class="theme-shadow" src="src/Light.png" alt="LogoAbout" />
         </div>
         <div class="main">
-          <img src="src/Light-No-BG-removebg-preview.png" alt="No-BG" />
+          <!-- <img src="src/Light-No-BG-removebg-preview.png" alt="No-BG" /> -->
+          <h1><span>Skr</span>ipsi<span><sup>+</sup></span></h1>
           <p>
-            <span><strong>Skripsi+ </strong></span>merupakan sebuah platform bimbingan skripsi
+            <span><strong>Skripsi<sup>+</sup> </strong></span>merupakan sebuah platform bimbingan skripsi
             online yang menyediakan instruktur-instruktur terpecaya untuk
             membimbing dan membantu para mahasiswa dalam menyelesaikan skripsi.
           </p>
@@ -111,15 +112,15 @@
 
         <div class="counter">
           <div class="count">
-            <h2>8.800</h2>
+            <p class="num">8.800</p>
             <p>Total Users</p>
           </div>
           <div class="count">
-            <h2>400</h2>
+            <p class="num">400</p>
             <p>Total Mentors</p>
           </div>
           <div class="count">
-            <h2>40++</h2>
+            <p class="num">40++</p>
             <p>Total Courses</p>
           </div>
         </div>
@@ -264,16 +265,16 @@
             <img src="src/Dark-removebg-preview.png" alt="logo">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email: Skripsi+@example.com</p>
-                <p>Phone: +628555913000</p>
-                <p>Website: www.Skripsi+.edu.id</p>
+                <p>Skripsi+@example.com</p>
+                <p>+628555913000</p>
+                <p>www.Skripsi+.edu.id</p>
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
                 <ul class="list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Mentors</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="Mentor.html">Mentors</a></li>
+                    <li><a href="Course.html">Courses</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
