--- a/Course.html
+++ b/Course.html
@@ -177,16 +177,16 @@
           <img src="src/Dark-removebg-preview.png" alt="logo" />
           <div class="footer-content">
             <h3>Contact Us</h3>
-            <p>Email: Skripsi+@example.com</p>
-            <p>Phone: +628555913000</p>
-            <p>Website: www.Skripsi+.edu.id</p>
+            <p>Skripsi+@example.com</p>
+            <p>+628555913000</p>
+            <p>www.Skripsi+.edu.id</p>
           </div>
           <div class="footer-content">
             <h3>Quick Links</h3>
             <ul class="list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Mentors</a></li>
-              <li><a href="#">Courses</a></li>
+              <li><a href="Home.html">Home</a></li>
+              <li><a href="Mentor.html">Mentors</a></li>
+              <li><a href="Course.html">Courses</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
