feat: navbar transparent

--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,8 @@
   <body>
     <div class="container">
       <!-- NAVBAR -->
-      <nav class="theme-shadow">
+      <!-- <nav class="theme-shadow"> -->
+      <nav id="navbar" class="navbar">
         <img class="logo" src="src/Light.png" alt="Logo" />
         <div class="menu-items">
           <a href="Home.html">Home</a>
@@ -32,11 +33,15 @@
         </div>
         <div class="main">
           <!-- <img src="src/Light-No-BG-removebg-preview.png" alt="No-BG" /> -->
-          <h1><span>Skr</span>ipsi<span><sup>+</sup></span></h1>
+          <h1>
+            <span>Skr</span>ipsi<span><sup>+</sup></span>
+          </h1>
           <p>
-            <span><strong>Skripsi<sup>+</sup> </strong></span>merupakan sebuah platform bimbingan skripsi
-            online yang menyediakan instruktur-instruktur terpecaya untuk
-            membimbing dan membantu para mahasiswa dalam menyelesaikan skripsi.
+            <span
+              ><strong>Skripsi<sup>+</sup> </strong></span
+            >merupakan sebuah platform bimbingan skripsi online yang menyediakan
+            instruktur-instruktur terpecaya untuk membimbing dan membantu para
+            mahasiswa dalam menyelesaikan skripsi.
           </p>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod,
@@ -262,37 +267,40 @@
 
       <footer>
         <div class="container-footer">
-            <img src="src/Dark-removebg-preview.png" alt="logo">
-            <div class="footer-content">
-                <h3>Contact Us</h3>
-                <p>Skripsi+@example.com</p>
-                <p>+628555913000</p>
-                <p>www.Skripsi+.edu.id</p>
-            </div>
-            <div class="footer-content">
-                <h3>Quick Links</h3>
-                <ul class="list">
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="Mentor.html">Mentors</a></li>
-                    <li><a href="Course.html">Courses</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-content">
-                <h3>Follow Us</h3>
-                <ul class="list">
-                    <li><a href="#">Youtube</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Github</a></li>
-                </ul>
-            </div>
+          <img src="src/Dark-removebg-preview.png" alt="logo" />
+          <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>Skripsi+@example.com</p>
+            <p>+628555913000</p>
+            <p>www.Skripsi+.edu.id</p>
+          </div>
+          <div class="footer-content">
+            <h3>Quick Links</h3>
+            <ul class="list">
+              <li><a href="Home.html">Home</a></li>
+              <li><a href="Mentor.html">Mentors</a></li>
+              <li><a href="Course.html">Courses</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-content">
+            <h3>Follow Us</h3>
+            <ul class="list">
+              <li><a href="#">Youtube</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">LinkedIn</a></li>
+              <li><a href="#">Github</a></li>
+            </ul>
+          </div>
         </div>
         <div class="bottom-bar">
-            <p>&copy; 2024 Skripsi+</p>
+          <p>&copy; 2024 Skripsi+</p>
         </div>
       </footer>
     </div>
+
+    <!-- Script buat navbar scroll ada warnanya -->
+    <script src="script/nav-scroll.js"></script>
   </body>
 </html>
