--- a/Course.html
+++ b/Course.html
@@ -10,22 +10,23 @@
   <body>
     <div class="container">
       <!-- NAVBAR -->
-      <nav class="theme-shadow">
-        <img class="logo" src="src/Light.png" alt="Logo" />
-        <div class="menu-items">
-          <a href="Home.html">Home</a>
-          <a href="#">About</a>
-          <a href="Mentor.html">Mentors</a>
-          <a href="Course.html">Courses</a>
-          <a href="#">contact</a>
-        </div>
-        <div class="buttons">
-          <button class="btn btn-login"><a href="#">Login</a></button>
-          <button class="btn btn-register"><a href="#">Register</a></button>
-        </div>
-      </nav>
+      <!-- <nav class="theme-shadow"> -->
+        <nav id="navbar" class="navbar">
+          <img class="logo" src="src/Light-removebg-preview.png" alt="Logo" />
+          <div class="menu-items">
+            <a href="Home.html">Home</a>
+            <a href="#">About</a>
+            <a href="Mentor.html">Mentors</a>
+            <a href="Course.html">Courses</a>
+            <a href="#">contact</a>
+          </div>
+          <div class="buttons">
+            <button class="btn btn-login"><a href="#">Login</a></button>
+            <button class="btn btn-register"><a href="#">Register</a></button>
+          </div>
+        </nav>
 
-      <section class="sec-3 mentor">
+      <section class="sec-3 mentor upper-padding">
         <h1>Our Courses</h1>
 
         <!-- Search bar -->
@@ -206,5 +207,8 @@
         </div>
       </footer>
     </div>
+
+    <!-- Script buat navbar scroll ada warnanya -->
+    <script src="script/nav-scroll.js"></script>
   </body>
 </html>
