--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
       <!-- NAVBAR -->
       <!-- <nav class="theme-shadow"> -->
       <nav id="navbar" class="navbar">
-        <img class="logo" src="src/Light.png" alt="Logo" />
+        <img class="logo" src="src/Light-removebg-preview.png" alt="Logo" />
         <div class="menu-items">
           <a href="Home.html">Home</a>
           <a href="#">About</a>
@@ -27,7 +27,7 @@
       </nav>
 
       <!-- SECTION 1 -->
-      <section class="sec-1">
+      <section class="sec-1 upper-padding">
         <div class="side">
           <img class="theme-shadow" src="src/Light.png" alt="LogoAbout" />
         </div>
