--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
           <a href="#">About</a>
           <a href="Mentor.html">Mentors</a>
           <a href="Course.html">Courses</a>
-          <a href="#">contact</a>
+          <a href="Contact.html">Contact</a>
         </div>
         <div class="buttons">
           <button class="btn btn-login"><a href="#">Login</a></button>
