11 - Add FaQ Page

--- a/Course.html
+++ b/Course.html
@@ -18,7 +18,7 @@
             <a href="#">About</a>
             <a href="Mentor.html">Mentors</a>
             <a href="Course.html">Courses</a>
-            <a href="#">contact</a>
+            <a href="Faq.html">FaQ's</a>
           </div>
           <div class="buttons">
             <button class="btn btn-login"><a href="#">Login</a></button>
@@ -189,7 +189,7 @@
               <li><a href="Mentor.html">Mentors</a></li>
               <li><a href="Course.html">Courses</a></li>
               <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="Faq.html">FaQ's</a></li>
             </ul>
           </div>
           <div class="footer-content">
