--- a/About.html
+++ b/About.html
@@ -102,13 +102,13 @@
   <body>
     <!-- NAVBAR -->
     <nav id="navbar" class="navbar">
-      <img class="logo" src="src/Light-removebg-preview.png" alt="Logo" />
+      <img class="logo" src="src/logo-svg/Light-Logo.svg" alt="Logo" />
       <div class="menu-items">
         <a href="Home.html">Home</a>
         <a href="About.html">About</a>
         <a href="Mentor.html">Mentors</a>
         <a href="Course.html">Courses</a>
-        <a href="Faq.html">FaQ's</a>
+        <a href="#">FAQ</a>
       </div>
       <div class="buttons">
         <button class="btn btn-login"><a href="#">Login</a></button>
