add footer , fix faq nav, banner sementara

--- a/About.html
+++ b/About.html
@@ -16,7 +16,9 @@
       .banner {
         width: 100%;
         height: 400px;
-        background-image: url("https://picsum.photos/1200/400");
+        /* sementara */
+        background-color: darkgrey;
+        /* background-image: url("https://picsum.photos/1200/400"); */
         background-size: cover;
         background-position: center;
         display: flex;
@@ -108,7 +110,7 @@
         <a href="About.html">About</a>
         <a href="Mentor.html">Mentors</a>
         <a href="Course.html">Courses</a>
-        <a href="#">FAQ</a>
+        <a href="Faq.html">FAQ</a>
       </div>
       <div class="buttons">
         <button class="btn btn-login"><a href="#">Login</a></button>
@@ -281,6 +283,41 @@
         </div>
       </div>
     </div>
+
+    <!-- footer -->
+    <footer>
+      <div class="container-footer">
+        <img src="src/Dark-removebg-preview.png" alt="logo" />
+        <div class="footer-content">
+          <h3>Contact Us</h3>
+          <p>Skripsi+@example.com</p>
+          <p>+628555913000</p>
+          <p>www.Skripsi+.edu.id</p>
+        </div>
+        <div class="footer-content">
+          <h3>Quick Links</h3>
+          <ul class="list">
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Mentor.html">Mentors</a></li>
+            <li><a href="Course.html">Courses</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Faq.html">FaQ's</a></li>
+          </ul>
+        </div>
+        <div class="footer-content">
+          <h3>Follow Us</h3>
+          <ul class="list">
+            <li><a href="#">Youtube</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Github</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottom-bar">
+        <p>&copy; 2024 Skripsi+</p>
+      </div>
+    </footer>
 
     <!-- Script buat navbar scroll ada warnanya -->
     <script src="script/nav-scroll.js"></script>
