--- a/About.html
+++ b/About.html
@@ -110,7 +110,7 @@
         <a href="About.html">About</a>
         <a href="Mentor.html">Mentors</a>
         <a href="Course.html">Courses</a>
-        <a href="Faq.html">FAQ</a>
+        <a href="Faq.html">FAQ's</a>
       </div>
       <div class="buttons">
         <button class="btn btn-login"><a href="#">Login</a></button>
