--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
     <title>Skripsi+ About</title>
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="src/Light.png" type="image/x-icon" />
     <style>
       body {
         margin: 0;
@@ -18,7 +19,7 @@
         height: 400px;
         /* sementara */
         background-color: darkgrey;
-        /* background-image: url("https://picsum.photos/1200/400"); */
+        background-image: url("src/about.jpeg");
         background-size: cover;
         background-position: center;
         display: flex;
