--- a/Faq.html
+++ b/Faq.html
@@ -31,10 +31,10 @@
 
       <!-- Konten Section -->
 	  <section class="sec-3 mentor upper-padding">
-      <h1>FaQ</h1>
+      <h1>FaQ's</h1>
       <div class="konten-sec3 contact">
         <div class="card-sec3">
-          <h3>Apa itu Skripsi<sup>+</sup></h3>
+          <h3>Apa itu Skripsi<sup>+</sup>?</h3>
           <hr />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
@@ -44,47 +44,23 @@
         </div>
 
         <div class="card-sec3">
-          <img src="src/dosen.png" alt="Dosen" />
-          <h3>Yuliandi S.Kom, M.Kom</h3>
+          <h3>Cara Daftar di Skripsi<sup>+</sup>?</h3>
+          <hr />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
             delectus quos dolores deserunt atque ullam eos, quo debitis maxime
             voluptatibus aut adipisci odit fuga?
           </p>
-          <hr />
         </div>
 
         <div class="card-sec3">
-          <img src="src/dosen.png" alt="Dosen" />
-          <h3>Yuliandi S.Kom, M.Kom</h3>
+          <h3>Lupa Password?</h3>
+          <hr />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
             delectus quos dolores deserunt atque ullam eos, quo debitis maxime
             voluptatibus aut adipisci odit fuga?
           </p>
-          <hr />
-        </div>
-
-        <div class="card-sec3">
-          <img src="src/dosen.png" alt="Dosen" />
-          <h3>Yuliandi S.Kom, M.Kom</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
-            delectus quos dolores deserunt atque ullam eos, quo debitis maxime
-            voluptatibus aut adipisci odit fuga?
-          </p>
-          <hr />
-        </div>
-
-        <div class="card-sec3">
-          <img src="src/dosen.png" alt="Dosen" />
-          <h3>Yuliandi S.Kom, M.Kom</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
-            delectus quos dolores deserunt atque ullam eos, quo debitis maxime
-            voluptatibus aut adipisci odit fuga?
-          </p>
-          <hr />
         </div>
       </div>
     </section>
